--- a/LocalMachineMiniKube/loadbalancerLocal2.yaml
+++ b/LocalMachineMiniKube/loadbalancerLocal2.yaml
@@ -6,6 +6,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dennisdeployment2
+  #namespace: servicens
 spec:
   replicas: 2
   selector:
@@ -18,7 +19,7 @@ spec:
     spec:
       containers:
       - name: denniscontainer2
-        image: docker.io/dockeridiotfool/spring-boot-dennis2
+        image: docker.io/dockeridiotfool/spring-boot-dennis2:latest
         ports:
         - name: http-server
           containerPort: 8090
@@ -28,6 +29,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: dennisservice2
+  #namespace: servicens
   labels:
     app: denniscontainer2
 spec:
